      point to labels instead (CNY-1857)
    * The --replace-files option has been split into --replace-managed-files,
      --replace-unmanaged-files, --replace-modified-files, and
      --replace-config-files. The original option is still accepted, and is
      equivalent to specifying all four of the new options simultaneously
      (CNY-1270)

  o Bug Fixes:
    * Fix a bug in commit code that made r.macros.buildlabel unusable because
      you could not commit recipes that used it.  (CNY-1752)
    * An internal class, _AbstractPackageRecipe, has been renamed, to allow
      the inclusion of its methods in the subclasses' documentation pages.
      The old name is still available for compatibility with older modules.
      (CNY-1848)

  o Other changes:
    * showchangeset script displays information on redirec troves

Changes in 1.1.33:
  o Build Changes:
    * The addArchive() source action now handles xpi archives. (CNY-1793)
    * Unknown flags are now ignored when calling loadRecipe with a
      flavor, instead of printing a traceback.

  o Update Changes:
    * Updates to groups are now allowed to be merged with other groups
      in update jobs, reducing the number of jobs that are used for
      updates.

  o Client Changes:
    * Cloning now always increments group version counts, mimicing
      the behavior of group cooking. (CNY-1724)
    * When promoting, --all-flavors is now on by default.  However, if
      a flavor to promote or clone is specified, promotes will be
      limited by that flavor. (CNY-1535)
    * Several commands, such as promote, update and rq, now take an
      --exact-flavors flag.  If specified, the flavors for each trove
      must match exactly - no system flavor or heuristic is used to
      find the trove you want. (CNY-1829)
    * If there is a problem with domain name resolution, conary will
      retry 5 times. However, if the connection fails after those