@@ -1073,7 +1073,8 @@ class NetworkRepositoryClient(xmlshims.NetworkConvertors,
         return self._getTroveInfoByVerInfo(troveSpecs, bestFlavor, 
                                            'getTroveLeavesByBranch', 
                                            branches = True,
-                                           troveTypes = troveTypes)
+                                           troveTypes = troveTypes,
+                                           getLeaves=True)
 
     def getTroveVersionsByBranch(self, troveSpecs, bestFlavor = False,
                                  troveTypes = TROVE_QUERY_PRESENT):
@@ -2346,8 +2347,8 @@ class NetworkRepositoryClient(xmlshims.NetworkConvertors,
     def findTroves(self, labelPath, troves, defaultFlavor = None, 
                   acrossLabels = False, acrossFlavors = False,
                   affinityDatabase = None, allowMissing=False, 
-                  getLeaves = True, bestFlavor = True, 
-                  troveTypes=TROVE_QUERY_PRESENT, exactFlavors = False):
+                  getLeaves = True, bestFlavor = True,
+                  troveTypes=TROVE_QUERY_PRESENT, exactFlavors=False):
         """ 
         Searches for the given troveSpec requests in the context of a labelPath,
         affinityDatabase, and defaultFlavor.
